--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -16,15 +16,28 @@
     <title>Mental Oasis</title>
   </head>
   <body>
+
+    <!-- <div id="game-container" tabindex="0">
+      <div id="question-container" style="display: none;">
+          <div id="question"></div>
+          <button class="option-btn" id="optionA"></button>
+          <button class="option-btn" id="optionB"></button>
+          <button class="option-btn" id="optionC"></button>
+          <button class="option-btn" id="optionD"></button>
+      </div>
+  </div>
+
+  <iframe title="Juego" src="index.html" width="100%" height="100%" frameBorder="0"></iframe> -->
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/antd/dist/antd.min.js"></script>
-    <!-- <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
+    <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
     <script src="/src/juego/preguntas.js"></script>
-    <script src="/src/juego/game2.js"></script> -->
+    <script src="/src/juego/game2.js"></script>
 
   </body>
 </html>
