--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -22,6 +22,8 @@
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/antd/dist/antd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <!-- <script src="https://unpkg.com/kaboom@3000.0.1/dist/kaboom.js"></script>
     <script src="/src/juego/preguntas.js"></script>
     <script src="/src/juego/game2.js"></script> -->
